# pytorch-tfserving-tutorial

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
models/: models.config
notebooks/: create_savedmodel.ipynb
prometheus/: prometheus.yml
