[tool.poetry]
name = "tfserving"
version = "0.1.0"
description = ""
authors = ["Petr Kaderabek <petrkaderabek@seznam.cz>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipykernel = "^6.29.5"
torch = "^2.7.1"
torchvision = "^0.22.1"
torchaudio = "^2.7.1"
tensorflow = "2.15"
nobuco = "^0.17.0"
keras = "2.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
